--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -6,8 +6,8 @@
 [type: gettext/glade]data/online-services-dialog.ui
 [type: gettext/glade]data/preferences.ui
 [type: gettext/glade]data/request-popup-dialog.ui
-[type: gettext/glade]data/tweet-view.ui
-[type: gettext/glade]data/tweet-view.ui
+[type: gettext/glade]data/control-panel.ui
+[type: gettext/glade]data/control-panel.ui
 [type: gettext/glade]data/user-profile-viewer.ui
 
 
@@ -42,7 +42,7 @@ src/searches.c
 src/timer.c
 src/tweet-list.c
 src/tweets.c
-src/tweet-view.c
+src/control-panel.c
 src/ui-utils.c
 src/users.c
 src/users-glists.c
