--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -22,12 +22,14 @@ gtkbuilder_DATA =		 				\
 			user-profile-viewer.ui
 
 sexy_DATA =							\
+			main-window.ui				\
 			tweet-list.ui				\
 			friends-manager.ui			\
 			following-viewer.ui
 
 un_sexy_DATA =							\
-			tweet-list.ui.in.ui			\
+			main-window.in.ui			\
+			tweet-list.in.ui			\
 			friends-manager.in.ui			\
 			following-viewer.in.ui
 
@@ -51,7 +53,10 @@ DISTCLEANFILES =						\
 gtk_update_icon_cache=gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
 
 
+main-window.ui: sexy_DATA
 tweet-list.ui: sexy_DATA
+friends-manager.ui: sexy_DATA
+following-viewer.ui: sexy_DATA
 sexy_DATA: $(un_sexy_DATA)
 	@eol='$$'; \
 	list='$(un_sexy_DATA)'; for p in $$list; do \
