--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,13 +1,15 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
 [encoding: UTF-8]
+[type: gettext/glade]data/control-panel.ui
+[type: gettext/glade]data/control-panel.ui
+[type: gettext/glade]data/following-viewer.ui
 [type: gettext/glade]data/friends-manager.ui
 [type: gettext/glade]data/main-window.ui
 [type: gettext/glade]data/online-services-dialog.ui
 [type: gettext/glade]data/preferences.ui
 [type: gettext/glade]data/request-popup-dialog.ui
-[type: gettext/glade]data/control-panel.ui
-[type: gettext/glade]data/control-panel.ui
+[type: gettext/glade]data/tweet-list.ui
 [type: gettext/glade]data/user-profile-viewer.ui
 
 
@@ -19,6 +21,7 @@ src/about.c
 src/cache.c
 src/control-panel.c
 src/debug.c
+src/following-viewer.c
 src/friend-manager.c
 src/gconfig.c
 src/geometry.c
