--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([get2gnow], ["#00EEEDa18"], [http://bugzilla.gnome.org/enter_bug.cgi?product=get2gnow], [get2gnow])
+AC_INIT([get2gnow], ["#00BF01a19"], [http://bugzilla.gnome.org/enter_bug.cgi?product=get2gnow], [get2gnow])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])
 
@@ -86,8 +86,8 @@ PKG_CHECK_MODULES(get2gnow,
 	gio-2.0 >= $LIBGIO_VERSION_REQUIRED
 	libcanberra-gtk >= $LIBCANBERRA_VERSION_REQUIRED
 	libxml-2.0 >= $LIBXML_VERSION_REQUIRED
-	gobject-2.0
 	libgnomeui-2.0
+	gobject-2.0
 	gthread-2.0 >= $GTHREAD_VERSION_REGUIRED
 	gconf-2.0 >= $GCONF_VERSION_REQUIRED
 	$gnome_keyring_pkgconfig
@@ -96,9 +96,17 @@ AC_SUBST(get2gnow_CFLAGS)
 AC_SUBST(get2gnow_LIBS)
 
 dnl /************************************************************
-dnl *   debug & gdb support       *
+dnl *    gdb support                                            *
 dnl /************************************************************
-AM_CONDITIONAL(debug_CFLAGS="-g -ggdb", test x$enable_debug = xyes)
+AM_CONDITIONAL(debug_CFLAGS="-g -ggdb", test x$enable_gdb = xyes)
+
+if test x$enable_gdb = xyes ; then
+	debug_CFLAGS="-g -ggdb"
+fi
+
+dnl /************************************************************
+dnl *   GNOME_ENABLE_DEBUG support                              *
+dnl /************************************************************
 AM_CONDITIONAL(GNOME_ENABLE_DEBUG, test x$enable_debug = xyes)
 
 if test x$enable_debug = xyes ; then
@@ -126,10 +134,6 @@ src/Makefile
 po/Makefile
 ])
 
-echo
-echo "Prefix:       	$prefix"
-echo "GNOME Keyring:	$have_gnome_keyring"
-if test x$enable_debug = xyes ; then
-	printf "\nDebug Mode:	[enabled]\nDebug BUILDDIR:	$abs_pwd\n"
-fi
-echo
+printf "\nPrefix:\t\t\t%s\nGNOME Keyring:\t\t%s\n" "$prefix" "$have_gnome_keyring";
+if test x$enable_gdb = xyes ; then printf "gdb symbols:\t\t[enabled]\n"; fi;
+if test x$enable_debug = xyes ; then printf "Debug Mode:\t\t[enabled]\nDebug BUILDDIR:\t$abs_pwd\n"; fi;
