--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -306,8 +306,9 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-C_STD_MODE=gnu99
+UBERCHICK_CFLAGS=-std=gnu99 -g -ggdb
 AM_CFLAGS=									\
+		$(UBERCHICK_CFLAGS)						\
 		-I$(top_srcdir)                        				\
 		-I${top_builddir}						\
 		-DBUILDDIR=\""${abs_top_builddir}"\"				\
@@ -317,9 +318,9 @@ AM_CFLAGS=									\
 		-DLOCALEDIR=\""$(localedir)"\"					\
 		-DLIBDIR=\""$(libdir)"\"					\
 		-DLIBSOUP_VERSION=\""`pkg-config --modversion libsoup-2.4`"\"	\
-		$(get2gnow_CFLAGS)						\
 		$(WARN_CFLAGS)							\
-		-std=$(C_STD_MODE)
+		$(debug_CFLAGS)							\
+		$(get2gnow_CFLAGS)
 
 get2gnow_LDADD =								\
 	$(get2gnow_LIBS)
