--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,40 +21,42 @@ if HAVE_GNOME_KEYRING
 keyring_sources = keyring.c keyring.h
 endif
 
-get2gnow_SOURCES = 			online-services-typedefs.h	\
-	$(keyring_sources)						\
-	program.c			program.h			\
-	main.c				main.h				\
-	online-services.c		online-services.h		\
-	online-service.c		online-service.h		\
-	online-service-wrapper.c	online-service-wrapper.h	\
-	online-service-request.c	online-service-request.h	\
-	online-services-dialog.c	online-services-dialog.h	\
-	users-glists.c			users-glists.h			\
-	network.c			network.h			\
-	timer.c				timer.h				\
-	proxy.c				proxy.h				\
-	gconfig.c			gconfig.h			\
-	debug.c				debug.h				\
-	cache.c				cache.h				\
-	gtkbuilder.c			gtkbuilder.h			\
+get2gnow_SOURCES = 							\
 	about.c				about.h				\
-	ipc.c				ipc.h				\
-	main-window.c			main-window.h			\
-	geometry.c			geometry.h			\
-	label.c				label.h				\
-	parser.c			parser.h			\
-	groups.c			groups.h			\
-	searches.c			searches.h			\
-	preferences.c			preferences.h			\
-	ui-utils.c			ui-utils.h			\
+	control-panel.c			control-panel.h			\
+	cache.c				cache.h				\
+	debug.c				debug.h				\
 	following-viewer.c		following-viewer.h		\
 	friend-manager.c		friend-manager.h		\
-	control-panel.c			control-panel.h			\
-	tweets.c			tweets.h			\
-	users.c				users.h				\
+	gconfig.c			gconfig.h			\
+	geometry.c			geometry.h			\
+	groups.c			groups.h			\
+	gtkbuilder.c			gtkbuilder.h			\
 	images.c			images.h			\
-	tweet-list.c			tweet-list.h
+	ipc.c				ipc.h				\
+	$(keyring_sources)						\
+	label.c				label.h				\
+	main.c				main.h				\
+	main-window.c			main-window.h			\
+	network.c			network.h			\
+	online-service.c		online-service.h		\
+	online-service-request.c	online-service-request.h	\
+	online-services.c		online-services.h		\
+	online-services-dialog.c	online-services-dialog.h	\
+	online-services-typedefs.h					\
+	online-service-wrapper.c	online-service-wrapper.h	\
+	parser.c			parser.h			\
+	preferences.c			preferences.h			\
+	program.c			program.h			\
+	proxy.c				proxy.h				\
+	searches.c			searches.h			\
+	timer.c				timer.h				\
+	tweet-list.c			tweet-list.h			\
+	tweet-lists.c			tweet-lists.h			\
+	tweets.c			tweets.h			\
+	ui-utils.c			ui-utils.h			\
+	users-glists.c			users-glists.h			\
+	users.c				users.h
 
 
 get2gnow_LDADD=								\
