--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -82,7 +82,7 @@ get2gnow_SOURCES = 							\
 	tweets.c			tweets.h			\
 	ui-utils.c			ui-utils.h			\
 	users-glists.c			users-glists.h			\
-	users.c				users.h
+	users.c		users.types.h		users.h
 
 
 @HAVE_GNOME_KEYRING_TRUE@am__objects_1 = keyring.$(OBJEXT)
