--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -452,7 +452,7 @@
 			<applyto>/apps/@PACKAGE_NAME@/ui/embed_view/height</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>int</type>
-			<default>690</default>
+			<default>680</default>
 			<locale name="C">
 				<short>Embed view height</short>
 				<long>Embed view height.</long>
@@ -464,7 +464,7 @@
 			<applyto>/apps/@PACKAGE_NAME@/ui/embed_view/width</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>int</type>
-			<default>730</default>
+			<default>1100</default>
 			<locale name="C">
 				<short>Embed view width</short>
 				<long>Embed view width.</long>
@@ -496,8 +496,20 @@
 		</schema>
 		
 		<schema>
-			<key>/schemas/apps/@PACKAGE_NAME@/ui/positions/vpaned_tweet_view</key>
-			<applyto>/apps/@PACKAGE_NAME@/ui/positions/vpaned_tweet_view</applyto>
+			<key>/schemas/apps/@PACKAGE_NAME@/ui/positions/vpaned_tweet_list</key>
+			<applyto>/apps/@PACKAGE_NAME@/ui/positions/vpaned_tweet_list</applyto>
+			<owner>@PACKAGE_NAME@</owner>
+			<type>int</type>
+			<default>25</default>
+			<locale name="C">
+				<short>Tweet View's vertical slider bar's position</short>
+				<long>Tweet View's vertical slider bar's position.</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/@PACKAGE_NAME@/ui/positions/hpaned_control_panel</key>
+			<applyto>/apps/@PACKAGE_NAME@/ui/positions/hpaned_control_panel</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>int</type>
 			<default>25</default>
