--- a/data/get2gnow.schemas.in
+++ b/data/get2gnow.schemas.in
@@ -121,15 +121,58 @@
 		</schema>
 		
 		<schema>
+			<key>/schemas/apps/@PACKAGE_NAME@/ui/update_viewer/scroll_to_top_with_new_updates</key>
+			<applyto>/apps/@PACKAGE_NAME@/ui/update_viewer/scroll_to_top_with_new_updates</applyto>
+			<owner>@PACKAGE_NAME@</owner>
+			<type>bool</type>
+			<default>true</default>
+			<locale name="C">
+				<short>Rather or not to move @PACKAGE_NAME@'s focus to the 1st new update when one's recieved.</short>
+				<long>
+					Rather or not to  move @PACKAGE_NAME@'s focus to the 1st new update when one's recieved.
+				</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/@PACKAGE_NAME@/ui/update_viewer/select_update_by_default</key>
+			<applyto>/apps/@PACKAGE_NAME@/ui/update_viewer/select_update_by_default</applyto>
+			<owner>@PACKAGE_NAME@</owner>
+			<type>bool</type>
+			<default>true</default>
+			<locale name="C">
+				<short>Rather or not to select and display an update when browsing via keyboard shortcuts.</short>
+				<long>
+					Rather or not to select and display an update when browsing via keyboard shortcuts.
+				</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/@PACKAGE_NAME@/online-services/xml-cache/archive/expiration/default</key>
+			<applyto>/apps/@PACKAGE_NAME@/online-services/xml-cache/archive/expiration/default</applyto>
+			<owner>@PACKAGE_NAME@</owner>
+			<type>int</type>
+			<default>2419200</default>
+			<locale name="C">
+				<short>How long to archive/keep most updates for (in seconds)</short>
+				<long>
+					How long to archive/keep most updates for (in seconds).
+					By default DMs from the last 4 weeks are loaded.
+				</long>
+			</locale>
+		</schema>
+		
+		<schema>
 			<key>/schemas/apps/@PACKAGE_NAME@/online-services/xml-cache/archive/expiration/dms</key>
 			<applyto>/apps/@PACKAGE_NAME@/online-services/xml-cache/archive/expiration/dms</applyto>
 			<owner>@PACKAGE_NAME@</owner>
 			<type>int</type>
 			<default>2419200</default>
 			<locale name="C">
-				<short>Seconds to keep retrieving DMs since</short>
+				<short>How long to archive/keep DMs for (in seconds)</short>
 				<long>
-					Seconds to keep retrieving DMs since.
+					How long to archive/keep DMs for (in seconds).
 					By default DMs from the last 4 weeks are loaded.
 				</long>
 			</locale>
@@ -142,10 +185,25 @@
 			<type>int</type>
 			<default>604800</default>
 			<locale name="C">
-				<short>Seconds to keep retrieving replies since</short>
+				<short>How long to archive/keep replies for (in seconds)</short>
 				<long>
-					Seconds to keep retrieving replies since.
+					How long to archive/keep replies for (in seconds).
 					By default Replies, &amp; @ Mentions, from the last 7 days are loaded.
+				</long>
+			</locale>
+		</schema>
+		
+		<schema>
+			<key>/schemas/apps/@PACKAGE_NAME@/online-services/xml-cache/archive/expiration/faves</key>
+			<applyto>/apps/@PACKAGE_NAME@/online-services/xml-cache/archive/expiration/faves</applyto>
+			<owner>@PACKAGE_NAME@</owner>
+			<type>int</type>
+			<default>2419200</default>
+			<locale name="C">
+				<short>How long to archive/keep the user's star'd/favorite updates for(in seconds)</short>
+				<long>
+					How long to archive/keep the user's star'd/favorite updates for(in seconds).
+					By default star'd/favorite from the last 4 weeks are loaded.
 				</long>
 			</locale>
 		</schema>
@@ -157,9 +215,9 @@
 			<type>int</type>
 			<default>86400</default>
 			<locale name="C">
-				<short>Seconds to keep retrieving the user's best friends' updates since</short>
+				<short>How long to archive/keep the user's best friends' updates for (in seconds)</short>
 				<long>
-					Seconds to keep retrieving the user's best friends' updates since.
+					How long to archive/keep the user's best friends' updates for (in seconds).
 					By default &quot;Best Friends' Updates&quot; from the last 24 hrs are loaded.
 				</long>
 			</locale>
