--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -261,13 +261,13 @@ gtkbuilder_DATA =	 					\
 
 sexy_DATA =							\
 			main-window.ui				\
-			tweet-list.ui				\
+			update-viewer.ui				\
 			friends-manager.ui			\
 			following-viewer.ui
 
 un_sexy_DATA =							\
 			main-window.in.ui			\
-			tweet-list.in.ui			\
+			update-viewer.in.ui			\
 			friends-manager.in.ui			\
 			following-viewer.in.ui
 
@@ -350,7 +350,7 @@ uninstall-desktopDATA:
 
 
 main-window.ui: sexy_DATA
-tweet-list.ui: sexy_DATA
+update-viewer.ui: sexy_DATA
 friends-manager.ui: sexy_DATA
 following-viewer.ui: sexy_DATA
 sexy_DATA: $(un_sexy_DATA)
