--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -9,7 +9,7 @@
 [type: gettext/glade]data/online-services-dialog.ui
 [type: gettext/glade]data/preferences.ui
 [type: gettext/glade]data/request-popup-dialog.ui
-[type: gettext/glade]data/tweet-list.ui
+[type: gettext/glade]data/update-viewer.ui
 [type: gettext/glade]data/user-profile-viewer.ui
 
 
@@ -29,6 +29,7 @@ src/groups.c
 src/gtkbuilder.c
 src/images.c
 src/ipc.c
+src/hotkeys.c
 src/label.c
 src/main.c
 src/main-window.c
@@ -43,11 +44,10 @@ src/preferences.c
 src/program.c
 src/proxy.c
 src/searches.c
+src/tabs.c
 src/timer.c
-src/tweet-list.c
-src/tweet-lists.c
-src/tweets.c
 src/ui-utils.c
+src/update-viewer.c
 src/users.c
 src/users-glists.c
 
