--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -148,7 +148,7 @@ CATALOGS = @CATALOGS@
 CATOBJEXT = @CATOBJEXT@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
-CFLAGS = @CFLAGS@
+#CFLAGS = @CFLAGS@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CXX = @CXX@
@@ -322,8 +322,8 @@ AM_CFLAGS=									\
 		-DLIBSOUP_VERSION=\""`pkg-config --modversion libsoup-2.4`"\"	\
 		$(WARN_CFLAGS)							\
 		$(debug_CFLAGS)							\
-		$(UBERCHICK_CFLAGS)						\
 		$(get2gnow_CFLAGS)						\
+		$(UBERCHICK_CFLAGS)						\
 
 get2gnow_LDADD =								\
 	$(get2gnow_LIBS)
