--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -285,7 +285,8 @@ DISTCLEANFILES =						\
 			$(desktop_DATA)				\
 			$(schemas_DATA)
 
-gtk_update_icon_cache=gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
+@gtk_update_icon_cache@
+#gtk_update_icon_cache=gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
 
 all: all-am
 
