--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,6 @@
-AC_INIT([get2gnow], ["#010001a39"], [http://bugzilla.gnome.org/enter_bug.cgi?product=get2gnow], [get2gnow])
+AC_INIT([get2gnow], ["#010001a40"], [http://bugzilla.gnome.org/enter_bug.cgi?product=get2gnow], [get2gnow])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])
-
-PACKAGE="get2gnow"
 
 AC_CONFIG_SRCDIR([src/main.c])
 AC_CONFIG_HEADERS(config.h)
@@ -30,20 +28,6 @@ GNOME_COMPILE_WARNINGS([maximum])
 GNOME_CXX_WARNINGS
 GNOME_DEBUG_CHECK
 GNOME_MAINTAINER_MODE_DEFINES
-
-dnl /************************************************************
-dnl  * get2gnow's package, data, & install variables.           *
-dnl  ***********************************************************/
-AC_SUBST(PACKAGE)
-
-
-if `test -e "${prefix}/share/icons/hicolor/scalable/apps/get2gnow.svg"` ; then
-	gtk_update_icon_cache="gtk_update_icon_cache=echo \"${PACKAGE_NAME}'s icon is already installed\""
-else
-	gtk_update_icon_cache="gtk_update_icon_cache=gtk-update-icon-cache -f -t \$(datadir)/icons/hicolor"
-fi
-AC_SUBST(gtk_update_icon_cache)
-
 
 dnl /************************************************************
 dnl  *	Library Dependencies,					*
@@ -138,6 +122,23 @@ AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[Gettext package name])
 
 AM_GLIB_GNU_GETTEXT
+
+dnl /************************************************************
+dnl  * get2gnow's package, data, & install variables.           *
+dnl  ***********************************************************/
+PACKAGE="get2gnow"
+AC_SUBST(PACKAGE)
+
+printf "Checking for %s's icon.  Looking for:\n\t%s/share/icons/hicolor/scalable/apps/get2gnow.svg\n" ${PACKAGE_NAME} ${prefix}
+if `test -e "${prefix}/share/icons/hicolor/scalable/apps/get2gnow.svg"` ; then
+	printf "%s icon already exists.  GTK's icon cache will not be refreshed.\n"
+	gtk_update_icon_cache="gtk_update_icon_cache=echo \"${PACKAGE_NAME}'s icon is already installed\""
+else
+	printf "%s will be install and make install will attempt to update GTK's icon cache.\n"
+	gtk_update_icon_cache="gtk_update_icon_cache=gtk-update-icon-cache -f -t \$(datadir)/icons/hicolor"
+fi
+AC_SUBST(gtk_update_icon_cache)
+
 
 AC_OUTPUT([
 Makefile
